Added background color to html body

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Meet</title>
   </head>
+  <body style="background-color: #222;">
     <div id="root"></div>
   </body>
 </html>
