--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="The Meet App displays event data from a Google Calendar account provided by CareerFoundry" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/meet-app-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Meet</title>
   </head>
